--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://nichawee-room.github.io/nichaweeroom",
   "name": "nichawee-room",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -15,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-scripts": "^3.0.1",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
@@ -29,8 +33,9 @@
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
-    "typescript": "^5.6.2",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
