--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "^5.20.6",
     "firebase": "^10.13.2",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
@@ -35,7 +38,8 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
-    "typescript": "^4.9.5",
+    "rimraf": "^6.0.1",
+    "typescript": "^3.9.10",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
