--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,8 +7,7 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node", // Keep this as "node"
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
