--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2023"],
+    "lib": ["ES2022", "DOM"],
     "module": "ESNext",
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node", // Use 'node' or 'node16'
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
